--- a/index.html
+++ b/index.html
@@ -138,6 +138,6 @@
 </main></body>
 <footer id="footer">
    <h4>This sample web page was made as my example to Build a Tribute Page <a id="tribute-link"
-href="https://www.freecodecamp.org" target="_blank"><u>freeCodeCamp</u></a> exercise. All conditions were met with slider addition and media rule for small screens . And I tried to show my design skills . Visit my <a href="https://github.com/bugxbug" target="_blank"><u>Github</u></a></h4> 
+href="https://www.freecodecamp.org" target="_blank"><u>freeCodeCamp</u></a> exercise. HTML/CSS ONLY All conditions were met with slider addition and media rule for small screens . And I tried to show my design skills . Visit my <a href="https://github.com/bugxbug" target="_blank"><u>Github</u></a></h4> 
 </footer>
 </html>
