--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 <a href="https://cdn-icons-png.flaticon.com/512/733/733553.png?w=740&t=st=1680024427~exp=1680025027~hmac=7f151d749b8384d2260cb1b4f97ae1a2c2b93eca4ed3be949d7f1ee02278ba43">
 	<img src="https://cdn-icons-png.flaticon.com/512/145/145807.png?w=740&t=st=1680024222~exp=1680024822~hmac=d5bce32fbeb5886a9176fc6756d2779d4885814b8841bbec929ed5ace132d514"
-	     alt="Linked"/ width="100"></a>in
+	     alt="Linked"/ width="100"></a>
 						 
 
               <a href="https://github.com/bugxbug">
